--- a/app/public/survery.html
+++ b/app/public/survery.html
@@ -208,7 +208,7 @@
 
     <footer class="footer">
       <div class="container">
-        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/afhaque/friendfinder">GitHub
+        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/anukc1/FriendFinder">GitHub
             Repo</a></p>
       </div>
     </footer>
